[APPDEV-1266] add virtual host support to stage2 script
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@11621 842219ff-9341-0410-a943-573460bdd4de